Fix layout issue

--- a/less/bootstrap-tokenfield.less
+++ b/less/bootstrap-tokenfield.less
@@ -75,6 +75,10 @@
     .tokenfield-focus();
   }
 
+   .tokendiv {
+    float: left;
+  } 
+
   // Tokens
   .token {
     .box-sizing(border-box);
